[package]
name = "hello_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
hello_core = { path = "../hello_core" }
base64 = { workspace = true }
clap = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
percent-encoding = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
hello_sandbox = { path = "../hello_sandbox" }
jemallocator = { workspace = true }
log = { workspace = true }
mlua = { workspace = true }
mlua_derive = { workspace = true }
nom = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
hyper = { version = "1.8.1" }
hyper-util = { version = "0.1.20" }
mime_guess = { version = "2.0.5" }
mockito = { version = "1" }
nom-language = { version = "0.1.0" }
